--- a/pom.xml
+++ b/pom.xml
@@ -15,14 +15,12 @@
   ~ limitations under the License.
   -->
 
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.github.ykiselev</groupId>
     <artifactId>buffer-pool</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0</version>
     <description>A simple object pool fro byte buffers</description>
     <url>https://github.com/YKiselev/pool</url>
 
@@ -45,7 +43,7 @@
         <connection>scm:git:https://github.com/YKiselev/pool.git</connection>
         <developerConnection>scm:git:git@github.com:YKiselev/pool.git</developerConnection>
         <url>https://github.com/YKiselev/pool/tree/master</url>
-        <tag>HEAD</tag>
+        <tag>buffer-pool-1.0</tag>
     </scm>
 
     <dependencies>
