--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
 
     <groupId>com.github.ykiselev</groupId>
     <artifactId>buffer-pool</artifactId>
-    <version>1.1</version>
+    <version>1.2-SNAPSHOT</version>
     <name>buffer-pool</name>
     <description>A simple object pool fro byte buffers</description>
     <url>https://github.com/YKiselev/pool</url>
@@ -44,7 +44,7 @@
         <connection>scm:git:https://github.com/YKiselev/pool.git</connection>
         <developerConnection>scm:git:git@github.com:YKiselev/pool.git</developerConnection>
         <url>https://github.com/YKiselev/pool/tree/master</url>
-        <tag>buffer-pool-1.1</tag>
+        <tag>HEAD</tag>
     </scm>
 
     <dependencies>
