--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,7 @@
     <artifactId>buffer-pool</artifactId>
     <version>1.4-SNAPSHOT</version>
     <name>buffer-pool</name>
-    <description>A simple object pool fro byte buffers</description>
+    <description>A simple object pool for byte buffers</description>
     <url>https://github.com/YKiselev/pool</url>
 
     <developers>
